// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Header component can accept custom colors 1`] = `
.c0 {
  background-color: pink;
  color: wheat;
  padding: 1rem;
}

.c0 a,
.c0 a:hover,
.c0 a:focus,
.c0 a:active,
.c0 a:visited {
  display: block margin:0;
  font-size: 2rem;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:focus,
.c0 a:hover:focus,
.c0 a:focus:focus,
.c0 a:active:focus,
.c0 a:visited:focus {
  outline: 2px dotted wheat;
}

<header
  class="c0"
>
  <a
    href="/"
  >
    GlyphWorks
  </a>
</header>
`;

exports[`The Header component can display a default title 1`] = `
.c0 {
  background-color: #621818;
  color: #fff7d4;
  padding: 1rem;
}

.c0 a,
.c0 a:hover,
.c0 a:focus,
.c0 a:active,
.c0 a:visited {
  display: block margin:0;
  font-size: 2rem;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 a:focus,
.c0 a:hover:focus,
.c0 a:focus:focus,
.c0 a:active:focus,
.c0 a:visited:focus {
  outline: 2px dotted #fff7d4;
}

<header
  class="c0"
>
  <a
    href="/"
  >
    GlyphWorks
  </a>
</header>
`;
